[package]
name = "proteus"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
windows = {version = "0.62.2", features = [
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Diagnostics",
    "Win32_Security",
]}
